# auralflow

./: .flake8  .gitignore  .python-version  LICENSE  README.md  __init__.py  _config.yml  config.json  config.py  config_placeholder.py  constants.py  model_config.json  old_train.py  parse_sessions.py  pyproject.toml  requirements.txt  separate.py  setup.py  train.py  transforms.py  validate.py  workspace.ipynb  workspace.py
AudioFolder/: datasets.py
FUCK/: events.out.tfevents.1651798214.24b5b4e3fd5e.11339.0  events.out.tfevents.1651798374.24b5b4e3fd5e.11568.0  events.out.tfevents.1651798415.24b5b4e3fd5e.11764.0  events.out.tfevents.1651798536.24b5b4e3fd5e.11964.0  events.out.tfevents.1651798602.24b5b4e3fd5e.12149.0  events.out.tfevents.1651798634.24b5b4e3fd5e.12327.0  events.out.tfevents.1651798730.24b5b4e3fd5e.12519.0  events.out.tfevents.1651798766.24b5b4e3fd5e.12697.0  events.out.tfevents.1651798905.24b5b4e3fd5e.12903.0  events.out.tfevents.1651798929.24b5b4e3fd5e.13046.0  events.out.tfevents.1651798959.24b5b4e3fd5e.13238.0  events.out.tfevents.1651799191.24b5b4e3fd5e.13489.0  events.out.tfevents.1651799412.24b5b4e3fd5e.13669.0  events.out.tfevents.1651799441.24b5b4e3fd5e.13817.0  events.out.tfevents.1651799461.24b5b4e3fd5e.13958.0  events.out.tfevents.1651799560.24b5b4e3fd5e.14165.0  events.out.tfevents.1651799616.24b5b4e3fd5e.14317.0  events.out.tfevents.1651799676.24b5b4e3fd5e.14468.0  events.out.tfevents.1651799783.24b5b4e3fd5e.14624.0  events.out.tfevents.1651799972.24b5b4e3fd5e.14788.0  events.out.tfevents.1651800041.24b5b4e3fd5e.14946.0  events.out.tfevents.1651800072.24b5b4e3fd5e.15092.0  events.out.tfevents.1651800116.24b5b4e3fd5e.15246.0
audio_folder/: __init__.py  datasets.py
auralflow/: __init__.py  __main__.py  build.py  configurations.py  parse.py  pretrained.py  separate.py  test.py  train.py  train_ddp.py  workspace.py
config/: __init__.py  build.py  config.py  constants.py  data_config.yaml  session_logs.yaml  training_config.yaml  utils.py
datasets/: __init__.py  datasets.py
datatools/: datasets.py
docs/: CNAME  Gemfile  Makefile  _config.yml  api.rst  auralflow.build.init_model.rst  auralflow.build.setup_model.rst  auralflow.customs.init_model.rst  (+36 more)
(+764 files in other folders)
