[tool.poetry]
name = "auralflow"
version = "0.1.3"
description = "A lightweight music source separation toolkit."
authors = ["Kian Zohoury <kzohoury@berkeley.edu>"]
readme = "README.md"
license = "MIT"
packages = [{include = "auralflow"}]

[tool.poetry.dependencies]
python = ">= 3.7.11 <= 3.7.13"
torch = "^1.12.0"
torchaudio = "^0.12.0"
librosa = "^0.9.2"
prettytable = "^3.3.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
cffi = "^1.15.1"
resampy = "^0.3.1"
tensorboard = "2.9.1"
protobuf = "3.13"
jupyter = "^1.0.0"
tensorflow = "^2.9.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
