[tool.poetry]
name = "auralflow"
version = "0.1.3"
description = "A lightweight music source separation toolkit."
authors = ["Kian Zohoury <kzohoury@berkeley.edu>"]
readme = "README.md"
license = "MIT"
packages = [{include = "auralflow"}]

[tool.poetry.dependencies]
python = ">= 3.7.11 <= 3.7.15"
jupyter = "^1.0.0"
tqdm = ">=4.64.0"
matplotlib = ">=3.2.2"
prettytable = ">=3.4.0"
tensorboard = ">=2.9.1"
numpy = ">=1.21.6"
scipy = ">=1.7.3"
protobuf = "3.9.2"
tensorflow = "2.9.1"
torch = "1.12.0"
torchaudio = "0.12.0"
#numba = "0.55.2"
gdown = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
auralflow = "auralflow.__main__:main"
